--- a/capstone/package.json
+++ b/capstone/package.json
@@ -10,14 +10,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build",
-//these are new up there^
-    "test": "echo \"Error: no test specified\" && exit 1",
-    // "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
-    // "heroku-postbuild": "cd client && npm install && npm run build",
-    // "start": "node app.js",
-    "client": "cd client && npm start",
-    "dev": "concurrently -n 'server,client' -c 'red,green'  \"nodemon app.js\" \"npm run client\""
+    "client": "cd client && npm start"
   },
   "keywords": [],
   "author": "",
