--- a/capstone/package.json
+++ b/capstone/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
-    "client": "cd client && npm start"
+    "heroku-postbuild": "cd client && npm install && npm run build",
+    "start": "node app.js",
+    "client": "cd client && npm start",
+    "dev": "concurrently -n 'server,client' -c 'red,green'  \"nodemon app.js\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -30,7 +29,6 @@
     "mongoose": "^5.10.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
-    "requirejs": "^2.3.6",
-    "serve": "^11.3.2"
+    "requirejs": "^2.3.6"
   }
 }
